tests/suite/snapshots/suite__case_t5n4.snap
---
source: tests/suite/cases.gen.rs
expression: tokens
---
- token: DirectivesEnd
  start:
    line: 0
    column: 0
  end:
    line: 0
    column: 3
- token: Separator
  start:
    line: 0
    column: 3
  end:
    line: 0
    column: 4
- token: Literal
  start:
    line: 0
    column: 4
  end:
    line: 0
    column: 5
- token: Break
  start:
    line: 0
    column: 5
  end:
    line: 1
    column: 0
- token: Indent
  start:
    line: 1
    column: 0
  end:
    line: 1
    column: 1
- token: Scalar
  start:
    line: 1
    column: 1
  end:
    line: 1
    column: 8
- token: ScalarBreak
  start:
    line: 1
    column: 8
  end:
    line: 2
    column: 0
- token: Indent
  start:
    line: 2
    column: 0
  end:
    line: 2
    column: 1
- token: Scalar
  start:
    line: 2
    column: 1
  end:
    line: 2
    column: 6
- token: ScalarBreak
  start:
    line: 2
    column: 6
  end:
    line: 3
    column: 0
- token: Indent
  start:
    line: 3
    column: 0
  end:
    line: 3
    column: 0
- token: Break
  start:
    line: 3
    column: 0
  end:
    line: 4
    column: 0
- token: Indent
  start:
    line: 4
    column: 0
  end:
    line: 4
    column: 0
- token: Break
  start:
    line: 4
    column: 0
  end:
    line: 5
    column: 0

