tests/suite/snapshots/suite__case_td5n.snap
---
source: tests/suite/cases.gen.rs
expression: diagnostics
---
- message: "remaining tokens: invalid\r\n"
  start:
    index: 18
    line: 2
    column: 0
  end:
    index: 18
    line: 2
    column: 0

