tests/suite/snapshots/suite__case_te2a.snap
---
source: tests/suite/cases.gen.rs
expression: tokens
---
- token: Indent
  start:
    index: 0
    line: 0
    column: 0
  end:
    index: 0
    line: 0
    column: 0
- token: Scalar
  start:
    index: 0
    line: 0
    column: 0
  end:
    index: 13
    line: 0
    column: 13
- token: MappingValue
  start:
    index: 13
    line: 0
    column: 13
  end:
    index: 14
    line: 0
    column: 14
- token: Break
  start:
    index: 14
    line: 0
    column: 14
  end:
    index: 16
    line: 1
    column: 0
- token: Indent
  start:
    index: 16
    line: 1
    column: 0
  end:
    index: 17
    line: 1
    column: 1
- token: Scalar
  start:
    index: 17
    line: 1
    column: 1
  end:
    index: 20
    line: 1
    column: 4
- token: MappingValue
  start:
    index: 20
    line: 1
    column: 4
  end:
    index: 21
    line: 1
    column: 5
- token: Separator
  start:
    index: 21
    line: 1
    column: 5
  end:
    index: 22
    line: 1
    column: 6
- token: Scalar
  start:
    index: 22
    line: 1
    column: 6
  end:
    index: 27
    line: 1
    column: 11
- token: Break
  start:
    index: 27
    line: 1
    column: 11
  end:
    index: 29
    line: 2
    column: 0

