tests/suite/snapshots/suite__case_tl85.snap
---
source: tests/suite/cases.gen.rs
expression: tokens
---
- token: Indent
  start:
    line: 0
    column: 0
  end:
    line: 0
    column: 0
- token: DoubleQuote
  start:
    line: 0
    column: 0
  end:
    line: 0
    column: 1
- token: ScalarSpace
  start:
    line: 0
    column: 1
  end:
    line: 1
    column: 0
- token: Indent
  start:
    line: 1
    column: 0
  end:
    line: 1
    column: 0
- token: Separator
  start:
    line: 1
    column: 0
  end:
    line: 1
    column: 2
- token: DoubleQuoted
  start:
    line: 1
    column: 2
  end:
    line: 1
    column: 5
- token: Separator
  start:
    line: 1
    column: 5
  end:
    line: 1
    column: 6
- token: Break
  start:
    line: 1
    column: 6
  end:
    line: 2
    column: 0
- token: Indent
  start:
    line: 2
    column: 0
  end:
    line: 2
    column: 0
- token: Separator
  start:
    line: 2
    column: 0
  end:
    line: 2
    column: 1
- token: ScalarBreak
  start:
    line: 2
    column: 1
  end:
    line: 3
    column: 0
- token: Indent
  start:
    line: 3
    column: 0
  end:
    line: 3
    column: 0
- token: Separator
  start:
    line: 3
    column: 0
  end:
    line: 3
    column: 4
- token: DoubleQuoted
  start:
    line: 3
    column: 4
  end:
    line: 3
    column: 7
- token: Break
  start:
    line: 3
    column: 7
  end:
    line: 4
    column: 0
- token: Indent
  start:
    line: 4
    column: 0
  end:
    line: 4
    column: 0
- token: ScalarBreak
  start:
    line: 4
    column: 0
  end:
    line: 5
    column: 0
- token: Indent
  start:
    line: 5
    column: 0
  end:
    line: 5
    column: 0
- token: Separator
  start:
    line: 5
    column: 0
  end:
    line: 5
    column: 2
- token: DoubleQuoted
  start:
    line: 5
    column: 2
  end:
    line: 5
    column: 5
- token: ScalarSpace
  start:
    line: 5
    column: 5
  end:
    line: 6
    column: 0
- token: Indent
  start:
    line: 6
    column: 0
  end:
    line: 6
    column: 0
- token: DoubleQuoted
  start:
    line: 6
    column: 0
  end:
    line: 6
    column: 0
- token: DoubleQuote
  start:
    line: 6
    column: 0
  end:
    line: 6
    column: 1
- token: Break
  start:
    line: 6
    column: 1
  end:
    line: 7
    column: 0

