tests/suite/snapshots/suite__case_ts54.snap
---
source: tests/suite/cases.gen.rs
expression: tokens
---
- token: Indent
  start:
    index: 0
    line: 0
    column: 0
  end:
    index: 0
    line: 0
    column: 0
- token: Folded
  start:
    index: 0
    line: 0
    column: 0
  end:
    index: 1
    line: 0
    column: 1
- token: Break
  start:
    index: 1
    line: 0
    column: 1
  end:
    index: 3
    line: 1
    column: 0
- token: Indent
  start:
    index: 3
    line: 1
    column: 0
  end:
    index: 4
    line: 1
    column: 1
- token: Scalar
  start:
    index: 4
    line: 1
    column: 1
  end:
    index: 6
    line: 1
    column: 3
- token: ScalarSpace
  start:
    index: 6
    line: 1
    column: 3
  end:
    index: 8
    line: 2
    column: 0
- token: Indent
  start:
    index: 8
    line: 2
    column: 0
  end:
    index: 9
    line: 2
    column: 1
- token: Scalar
  start:
    index: 9
    line: 2
    column: 1
  end:
    index: 11
    line: 2
    column: 3
- token: Break
  start:
    index: 11
    line: 2
    column: 3
  end:
    index: 13
    line: 3
    column: 0
- token: Indent
  start:
    index: 13
    line: 3
    column: 0
  end:
    index: 14
    line: 3
    column: 1
- token: ScalarBreak
  start:
    index: 14
    line: 3
    column: 1
  end:
    index: 16
    line: 4
    column: 0
- token: Indent
  start:
    index: 16
    line: 4
    column: 0
  end:
    index: 17
    line: 4
    column: 1
- token: Scalar
  start:
    index: 17
    line: 4
    column: 1
  end:
    index: 19
    line: 4
    column: 3
- token: Break
  start:
    index: 19
    line: 4
    column: 3
  end:
    index: 21
    line: 5
    column: 0
- token: Indent
  start:
    index: 21
    line: 5
    column: 0
  end:
    index: 21
    line: 5
    column: 0
- token: ScalarBreak
  start:
    index: 21
    line: 5
    column: 0
  end:
    index: 23
    line: 6
    column: 0
- token: Indent
  start:
    index: 23
    line: 6
    column: 0
  end:
    index: 23
    line: 6
    column: 0
- token: ScalarBreak
  start:
    index: 23
    line: 6
    column: 0
  end:
    index: 25
    line: 7
    column: 0
- token: Indent
  start:
    index: 25
    line: 7
    column: 0
  end:
    index: 26
    line: 7
    column: 1
- token: Scalar
  start:
    index: 26
    line: 7
    column: 1
  end:
    index: 28
    line: 7
    column: 3
- token: ScalarBreak
  start:
    index: 28
    line: 7
    column: 3
  end:
    index: 30
    line: 8
    column: 0

