tests/suite/snapshots/suite__case_u3xv.snap
---
source: tests/suite/cases.gen.rs
expression: tokens
---
- token: DirectivesEnd
  start:
    line: 0
    column: 0
  end:
    line: 0
    column: 3
- token: Break
  start:
    line: 0
    column: 3
  end:
    line: 1
    column: 0
- token: Indent
  start:
    line: 1
    column: 0
  end:
    line: 1
    column: 0
- token: Scalar
  start:
    line: 1
    column: 0
  end:
    line: 1
    column: 4
- token: MappingValue
  start:
    line: 1
    column: 4
  end:
    line: 1
    column: 5
- token: Separator
  start:
    line: 1
    column: 5
  end:
    line: 1
    column: 6
- token: Anchor
  start:
    line: 1
    column: 6
  end:
    line: 1
    column: 7
- token: AnchorName
  start:
    line: 1
    column: 7
  end:
    line: 1
    column: 12
- token: Break
  start:
    line: 1
    column: 12
  end:
    line: 2
    column: 0
- token: Indent
  start:
    line: 2
    column: 0
  end:
    line: 2
    column: 2
- token: Anchor
  start:
    line: 2
    column: 2
  end:
    line: 2
    column: 3
- token: AnchorName
  start:
    line: 2
    column: 3
  end:
    line: 2
    column: 5
- token: Separator
  start:
    line: 2
    column: 5
  end:
    line: 2
    column: 6
- token: Scalar
  start:
    line: 2
    column: 6
  end:
    line: 2
    column: 10
- token: MappingValue
  start:
    line: 2
    column: 10
  end:
    line: 2
    column: 11
- token: Separator
  start:
    line: 2
    column: 11
  end:
    line: 2
    column: 12
- token: Scalar
  start:
    line: 2
    column: 12
  end:
    line: 2
    column: 15
- token: Break
  start:
    line: 2
    column: 15
  end:
    line: 3
    column: 0
- token: Indent
  start:
    line: 3
    column: 0
  end:
    line: 3
    column: 0
- token: Scalar
  start:
    line: 3
    column: 0
  end:
    line: 3
    column: 4
- token: MappingValue
  start:
    line: 3
    column: 4
  end:
    line: 3
    column: 5
- token: Separator
  start:
    line: 3
    column: 5
  end:
    line: 3
    column: 6
- token: Anchor
  start:
    line: 3
    column: 6
  end:
    line: 3
    column: 7
- token: AnchorName
  start:
    line: 3
    column: 7
  end:
    line: 3
    column: 12
- token: Separator
  start:
    line: 3
    column: 12
  end:
    line: 3
    column: 13
- token: Comment
  start:
    line: 3
    column: 13
  end:
    line: 3
    column: 14
- token: CommentText
  start:
    line: 3
    column: 14
  end:
    line: 3
    column: 22
- token: Break
  start:
    line: 3
    column: 22
  end:
    line: 4
    column: 0
- token: Indent
  start:
    line: 4
    column: 0
  end:
    line: 4
    column: 2
- token: Scalar
  start:
    line: 4
    column: 2
  end:
    line: 4
    column: 6
- token: MappingValue
  start:
    line: 4
    column: 6
  end:
    line: 4
    column: 7
- token: Separator
  start:
    line: 4
    column: 7
  end:
    line: 4
    column: 8
- token: Scalar
  start:
    line: 4
    column: 8
  end:
    line: 4
    column: 11
- token: Break
  start:
    line: 4
    column: 11
  end:
    line: 5
    column: 0
- token: Indent
  start:
    line: 5
    column: 0
  end:
    line: 5
    column: 0
- token: Scalar
  start:
    line: 5
    column: 0
  end:
    line: 5
    column: 4
- token: MappingValue
  start:
    line: 5
    column: 4
  end:
    line: 5
    column: 5
- token: Break
  start:
    line: 5
    column: 5
  end:
    line: 6
    column: 0
- token: Indent
  start:
    line: 6
    column: 0
  end:
    line: 6
    column: 2
- token: Anchor
  start:
    line: 6
    column: 2
  end:
    line: 6
    column: 3
- token: AnchorName
  start:
    line: 6
    column: 3
  end:
    line: 6
    column: 5
- token: Separator
  start:
    line: 6
    column: 5
  end:
    line: 6
    column: 6
- token: Scalar
  start:
    line: 6
    column: 6
  end:
    line: 6
    column: 10
- token: MappingValue
  start:
    line: 6
    column: 10
  end:
    line: 6
    column: 11
- token: Separator
  start:
    line: 6
    column: 11
  end:
    line: 6
    column: 12
- token: Scalar
  start:
    line: 6
    column: 12
  end:
    line: 6
    column: 17
- token: Break
  start:
    line: 6
    column: 17
  end:
    line: 7
    column: 0
- token: Indent
  start:
    line: 7
    column: 0
  end:
    line: 7
    column: 0
- token: Scalar
  start:
    line: 7
    column: 0
  end:
    line: 7
    column: 4
- token: MappingValue
  start:
    line: 7
    column: 4
  end:
    line: 7
    column: 5
- token: Break
  start:
    line: 7
    column: 5
  end:
    line: 8
    column: 0
- token: Indent
  start:
    line: 8
    column: 0
  end:
    line: 8
    column: 1
- token: Separator
  start:
    line: 8
    column: 1
  end:
    line: 8
    column: 2
- token: Anchor
  start:
    line: 8
    column: 2
  end:
    line: 8
    column: 3
- token: AnchorName
  start:
    line: 8
    column: 3
  end:
    line: 8
    column: 8
- token: Break
  start:
    line: 8
    column: 8
  end:
    line: 9
    column: 0
- token: Indent
  start:
    line: 9
    column: 0
  end:
    line: 9
    column: 2
- token: Anchor
  start:
    line: 9
    column: 2
  end:
    line: 9
    column: 3
- token: AnchorName
  start:
    line: 9
    column: 3
  end:
    line: 9
    column: 5
- token: Separator
  start:
    line: 9
    column: 5
  end:
    line: 9
    column: 6
- token: Scalar
  start:
    line: 9
    column: 6
  end:
    line: 9
    column: 10
- token: MappingValue
  start:
    line: 9
    column: 10
  end:
    line: 9
    column: 11
- token: Separator
  start:
    line: 9
    column: 11
  end:
    line: 9
    column: 12
- token: Scalar
  start:
    line: 9
    column: 12
  end:
    line: 9
    column: 16
- token: Break
  start:
    line: 9
    column: 16
  end:
    line: 10
    column: 0
- token: Indent
  start:
    line: 10
    column: 0
  end:
    line: 10
    column: 0
- token: Scalar
  start:
    line: 10
    column: 0
  end:
    line: 10
    column: 4
- token: MappingValue
  start:
    line: 10
    column: 4
  end:
    line: 10
    column: 5
- token: Break
  start:
    line: 10
    column: 5
  end:
    line: 11
    column: 0
- token: Indent
  start:
    line: 11
    column: 0
  end:
    line: 11
    column: 1
- token: Separator
  start:
    line: 11
    column: 1
  end:
    line: 11
    column: 2
- token: Anchor
  start:
    line: 11
    column: 2
  end:
    line: 11
    column: 3
- token: AnchorName
  start:
    line: 11
    column: 3
  end:
    line: 11
    column: 8
- token: Break
  start:
    line: 11
    column: 8
  end:
    line: 12
    column: 0
- token: Indent
  start:
    line: 12
    column: 0
  end:
    line: 12
    column: 2
- token: Scalar
  start:
    line: 12
    column: 2
  end:
    line: 12
    column: 6
- token: MappingValue
  start:
    line: 12
    column: 6
  end:
    line: 12
    column: 7
- token: Separator
  start:
    line: 12
    column: 7
  end:
    line: 12
    column: 8
- token: Scalar
  start:
    line: 12
    column: 8
  end:
    line: 12
    column: 12
- token: Break
  start:
    line: 12
    column: 12
  end:
    line: 13
    column: 0
- token: Indent
  start:
    line: 13
    column: 0
  end:
    line: 13
    column: 0
- token: Scalar
  start:
    line: 13
    column: 0
  end:
    line: 13
    column: 4
- token: MappingValue
  start:
    line: 13
    column: 4
  end:
    line: 13
    column: 5
- token: Separator
  start:
    line: 13
    column: 5
  end:
    line: 13
    column: 6
- token: Anchor
  start:
    line: 13
    column: 6
  end:
    line: 13
    column: 7
- token: AnchorName
  start:
    line: 13
    column: 7
  end:
    line: 13
    column: 11
- token: Break
  start:
    line: 13
    column: 11
  end:
    line: 14
    column: 0
- token: Indent
  start:
    line: 14
    column: 0
  end:
    line: 14
    column: 1
- token: Separator
  start:
    line: 14
    column: 1
  end:
    line: 14
    column: 2
- token: Scalar
  start:
    line: 14
    column: 2
  end:
    line: 14
    column: 5
- token: Break
  start:
    line: 14
    column: 5
  end:
    line: 15
    column: 0
- token: Indent
  start:
    line: 15
    column: 0
  end:
    line: 15
    column: 0
- token: Scalar
  start:
    line: 15
    column: 0
  end:
    line: 15
    column: 4
- token: MappingValue
  start:
    line: 15
    column: 4
  end:
    line: 15
    column: 5
- token: Break
  start:
    line: 15
    column: 5
  end:
    line: 16
    column: 0
- token: Indent
  start:
    line: 16
    column: 0
  end:
    line: 16
    column: 1
- token: Separator
  start:
    line: 16
    column: 1
  end:
    line: 16
    column: 2
- token: Anchor
  start:
    line: 16
    column: 2
  end:
    line: 16
    column: 3
- token: AnchorName
  start:
    line: 16
    column: 3
  end:
    line: 16
    column: 7
- token: Separator
  start:
    line: 16
    column: 7
  end:
    line: 16
    column: 8
- token: Scalar
  start:
    line: 16
    column: 8
  end:
    line: 16
    column: 13
- token: Break
  start:
    line: 16
    column: 13
  end:
    line: 17
    column: 0

