tests/suite/snapshots/suite__case_udm2.snap
---
source: tests/suite/cases.gen.rs
expression: tokens
---
- token: Indent
  start:
    index: 0
    line: 0
    column: 0
  end:
    index: 0
    line: 0
    column: 0
- token: SequenceEntry
  start:
    index: 0
    line: 0
    column: 0
  end:
    index: 1
    line: 0
    column: 1
- token: Separator
  start:
    index: 1
    line: 0
    column: 1
  end:
    index: 2
    line: 0
    column: 2
- token: MappingStart
  start:
    index: 2
    line: 0
    column: 2
  end:
    index: 3
    line: 0
    column: 3
- token: Separator
  start:
    index: 3
    line: 0
    column: 3
  end:
    index: 4
    line: 0
    column: 4
- token: Scalar
  start:
    index: 4
    line: 0
    column: 4
  end:
    index: 7
    line: 0
    column: 7
- token: MappingValue
  start:
    index: 7
    line: 0
    column: 7
  end:
    index: 8
    line: 0
    column: 8
- token: Separator
  start:
    index: 8
    line: 0
    column: 8
  end:
    index: 9
    line: 0
    column: 9
- token: Scalar
  start:
    index: 9
    line: 0
    column: 9
  end:
    index: 27
    line: 0
    column: 27
- token: Separator
  start:
    index: 27
    line: 0
    column: 27
  end:
    index: 28
    line: 0
    column: 28
- token: MappingEnd
  start:
    index: 28
    line: 0
    column: 28
  end:
    index: 29
    line: 0
    column: 29
- token: Break
  start:
    index: 29
    line: 0
    column: 29
  end:
    index: 31
    line: 1
    column: 0

