tests/suite/snapshots/suite__case_udr7.snap
---
source: tests/suite/cases.gen.rs
expression: tokens
---
- token: Indent
  start:
    line: 0
    column: 0
  end:
    line: 0
    column: 0
- token: Scalar
  start:
    line: 0
    column: 0
  end:
    line: 0
    column: 8
- token: MappingValue
  start:
    line: 0
    column: 8
  end:
    line: 0
    column: 9
- token: Separator
  start:
    line: 0
    column: 9
  end:
    line: 0
    column: 10
- token: SequenceStart
  start:
    line: 0
    column: 10
  end:
    line: 0
    column: 11
- token: Separator
  start:
    line: 0
    column: 11
  end:
    line: 0
    column: 12
- token: Scalar
  start:
    line: 0
    column: 12
  end:
    line: 0
    column: 15
- token: CollectionEntry
  start:
    line: 0
    column: 15
  end:
    line: 0
    column: 16
- token: Separator
  start:
    line: 0
    column: 16
  end:
    line: 0
    column: 17
- token: Scalar
  start:
    line: 0
    column: 17
  end:
    line: 0
    column: 20
- token: CollectionEntry
  start:
    line: 0
    column: 20
  end:
    line: 0
    column: 21
- token: Separator
  start:
    line: 0
    column: 21
  end:
    line: 0
    column: 22
- token: SequenceEnd
  start:
    line: 0
    column: 22
  end:
    line: 0
    column: 23
- token: Break
  start:
    line: 0
    column: 23
  end:
    line: 1
    column: 0
- token: Indent
  start:
    line: 1
    column: 0
  end:
    line: 1
    column: 0
- token: Scalar
  start:
    line: 1
    column: 0
  end:
    line: 1
    column: 7
- token: MappingValue
  start:
    line: 1
    column: 7
  end:
    line: 1
    column: 8
- token: Separator
  start:
    line: 1
    column: 8
  end:
    line: 1
    column: 9
- token: MappingStart
  start:
    line: 1
    column: 9
  end:
    line: 1
    column: 10
- token: Separator
  start:
    line: 1
    column: 10
  end:
    line: 1
    column: 11
- token: Scalar
  start:
    line: 1
    column: 11
  end:
    line: 1
    column: 14
- token: MappingValue
  start:
    line: 1
    column: 14
  end:
    line: 1
    column: 15
- token: Separator
  start:
    line: 1
    column: 15
  end:
    line: 1
    column: 16
- token: Scalar
  start:
    line: 1
    column: 16
  end:
    line: 1
    column: 20
- token: CollectionEntry
  start:
    line: 1
    column: 20
  end:
    line: 1
    column: 21
- token: Separator
  start:
    line: 1
    column: 21
  end:
    line: 1
    column: 22
- token: Scalar
  start:
    line: 1
    column: 22
  end:
    line: 1
    column: 25
- token: MappingValue
  start:
    line: 1
    column: 25
  end:
    line: 1
    column: 26
- token: Separator
  start:
    line: 1
    column: 26
  end:
    line: 1
    column: 27
- token: Scalar
  start:
    line: 1
    column: 27
  end:
    line: 1
    column: 32
- token: Separator
  start:
    line: 1
    column: 32
  end:
    line: 1
    column: 33
- token: MappingEnd
  start:
    line: 1
    column: 33
  end:
    line: 1
    column: 34
- token: Break
  start:
    line: 1
    column: 34
  end:
    line: 2
    column: 0

